--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(fmt_test
     test_fmt_compile_master_noinline_removed_from_fill.cpp
     test_fmt_compile_separate_formatter.cpp
     test_fmt_compile_separate_formatter_noinline_removed_from_fill.cpp
-    test_to_chars.cpp
+    test_stringstream.cpp
 )
 target_compile_definitions(fmt_test PRIVATE FMT_HEADER_ONLY=1)
 target_include_directories(fmt_test PRIVATE include)
